# phh

./: .clang-format  .gitignore  .nvimignore  CMakeLists.txt  LICENSE.txt  README.md  build-all-debug.sh  debug-build.sh  format-clang-headers_and_sources.sh  run-build.sh
.zed/: debug.json.template  tasks.json.template
doc/: code-style.md
inc/: phh-headers.cmake
inc/phh/: config.hh  config.in.hh  error.hh  numeric.hh  phh_utility.hh  utils.hh
inc/phh/utils/: gen.hh  generate.hh  is.hh  uuid.hh
lib/phh/: CMakeLists.txt  NOTE.txt
phh/: CMakeLists.txt
phh/inc/phh/: buffer.hh  config.in.hh  error.hh  numeric.hh  size.hh  string.hh  uuid.hh
phh/src/phh/: lib.cc
script/cmake/: package-handler.conf.cmake
script/cmake/package/: argon2.conf.cmake  blake.conf.cmake  curl.conf.cmake  drogon.conf.cmake  jsoncpp.conf.cmake  openssl.conf.cmake  python3.conf.cmake  stb.conf.cmake
scripts/cmake/: definitions.cmake  init.cmake  packages.cmake
src/: phh-sources.cmake
src/phh/: lib.cc
src/phh/functions/: utility.cc
src/phh/utils/: gen.cc  generate.cc  is.cc  uuid.cc
test/phh/: CMakeLists.txt  test_string.cc
test/phh/unit/: unit_test_buffer.cc  unit_test_string.cc  unit_test_uuid.cc
tests/unit_test/: CMakeLists.txt  uuid_test.cc
